update css naming for css-structure_taco-truck

--- a/week_02/css-structure/css-structure_taco-truck/index.html
+++ b/week_02/css-structure/css-structure_taco-truck/index.html
@@ -17,9 +17,9 @@
     </header>
 
     <main>
-      <h2 class="title">Menu</h2>
-      <ul class="menu">
-        <li class="menu__meal-card">
+      <h2 class="main__title">Menu</h2>
+      <ul class="food-menu">
+        <li class="food-menu__meal-card">
           <section>
             <h3>
               Classic Beef Tacos <span role="img" aria-label="A taco">🌮</span>
@@ -33,7 +33,7 @@
           </section>
         </li>
 
-        <li class="menu__meal-card">
+        <li class="food-menu__meal-card">
           <section">
             <h3>
               Grilled Chicken Burrito
@@ -48,7 +48,7 @@
           </section>
         </li>
 
-        <li class="menu__meal-card">
+        <li class="food-menu__meal-card">
           <section">
             <h3>
               Vegetarian Quesadilla
@@ -63,7 +63,7 @@
           </section>
         </li>
 
-        <li class="menu__meal-card">
+        <li class="food-menu__meal-card">
           <section">
             <h3>
               Spicy Shrimp Tacos
@@ -78,7 +78,7 @@
           </section>
         </li>
 
-        <li class="menu__meal-card">
+        <li class="food-menu__meal-card">
           <section">
             <h3>
               Carne Asada Nachos <span role="img" aria-label="Nachos">🥩</span>
@@ -92,7 +92,7 @@
             </p>
           </section>
         </li>
-        <li class="menu__meal-card">
+        <li class="food-menu__meal-card">
           <section">
             <h3>
               Mexican Street Corn (Elote)
