--- a/week_03/html-forms/html-forms_finding-a11y-errors/index.html
+++ b/week_03/html-forms/html-forms_finding-a11y-errors/index.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <section>
-      <h1 class="title">Understanding A11y in Forms</h1>
+      <h1 id="title" class="title">Understanding A11y in Forms</h1>
       <p id="description">
         Please let us know how we can support you with a11y issues.
       </p>
       <form aria-describedby="title">
-        <fieldset>
-          <legend aria-describedby="description">Enter your information</legend>
+        <fieldset aria-describedby="description">
+          <legend>Enter your information</legend>
           <label for="name-Input">Name:</label>
           <input id="name-Input" type="text" name="name" required />
           <label for="age-Input">Age:</label>
